fix(web): wrap scoreCell flex div inside td to fix empty EW column

--- a/apps/web/src/components/HandHistoryTable/HandHistoryTable.module.css
+++ b/apps/web/src/components/HandHistoryTable/HandHistoryTable.module.css
@@ -47,6 +47,7 @@
   flex-direction: column;
   align-items: flex-end;
   line-height: 1.2;
+  text-align: right;
 }
 
 .scoreCumulative {
